--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         including scoping (<a href="https://docs.google.com/document/d/1dmCCLtQIUr84jyHMNd6_2cbjl_CpALveCc1RYGwJKIc/edit?usp=sharing">scoping document</a>), 
                         programming, debugging and deploying (<a><i>deployed website link</i></a>.) I used React for the front end and Node.js for the backend.                     
                     </p>    
-                    <p>You can find the repository at: <a href="https://github.com/Samuelvphipps/GripNGrin">https://github.com/Samuelvphipps/GripNGrin</a>.</p>
+                    <p>You can view the project at: <a href="https://gripngrin.herokuapp.com/#/home">https://gripngrin.herokuapp.com/#/home</a>.</p>
                 </div>
                         <!-- Reflection -->
                 <div class="projectDetailsContainer">
