remove lessons learned until reformat is complete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,24 @@
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="personalInfo">
         <h1>Sam Phipps</h1>
-        <p>I love puzzles, and not the kind with pieces. This includes technical problems in programming, 
-            but also card games and role playing games with my friends. If I am not solving puzzles, you can find me outside. 
-            My family and I spend much of our free time hunting, fishing, hiking, and gardening among other outdoor activities. 
-            p.s. I am currently working on my dad joke repertoire so please share any you think I should add to my portfolio!
+        <p>I love puzzles, and not the kind with pieces. This includes technical problems in programming,
+            but also card games and role playing games with my friends. If I am not solving puzzles, you can find me
+            outside.
+            My family and I spend much of our free time hunting, fishing, hiking, and gardening among other outdoor
+            activities.
+            p.s. I am currently working on my dad joke repertoire so please share any you think I should add to my
+            portfolio!
         </p>
     </header>
     <main>
-        
+
         <h1 class="pageHeader">A Journey Through My Projects</h1>
 
         <!-- First ever code -->
@@ -34,22 +39,23 @@
                 <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">About</h4>
                     <p>
-                        This was my first ever webpage. Built with html and css after learning the basics online. 
+                        This was my first ever webpage. Built with html and css after learning the basics online.
                         I used it as an application for Prime Digital Academy.
-                        This project was the stepping stone to my career as a developer, and I definitely 
+                        This project was the stepping stone to my career as a developer, and I definitely
                         caught the bug. It is wonderful to look back at a project and realize how far I have
-                        come. 
-                    </p>                          
-                    <p>You can find the project at <a href="https://samuelvphipps.github.io/">https://samuelvphipps.github.io/</a></p>
+                        come.
+                    </p>
+                    <p>You can find the project at <a
+                            href="https://samuelvphipps.github.io/">https://samuelvphipps.github.io/</a></p>
                 </div>
-                        <!-- Reflection -->
-                <div class="projectDetailsContainer">
+                <!-- Reflection -->
+                <!-- <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">Lessons learned</h4>
-                    <ul>                           
+                    <ul>
                         <li>The spread operator (...) can be used to transform objects as they are reconstructed.</li>
-                        <li>Creating a responsive application with smooth renders takes significant css work.</li>                                                           
-                    </ul>                
-                </div>
+                        <li>Creating a responsive application with smooth renders takes significant css work.</li>
+                    </ul>
+                </div> -->
             </div>
         </article>
 
@@ -64,23 +70,27 @@
                 <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">About</h4>
                     <p>
-                        This was my full fledged Single Page Application with routing and full page renders depending on the route.
-                        It was designed as a feedback form to provide instructors feedback on the day's lesson/lessons. 
-                        It was also my first use of Redux as a way to manage global state. As the user goes through the app an object is created in redux, which is 
-                        then send to the server and subsequently to the database on the submission confirmation. 
-                    </p>                          
+                        This was my full fledged Single Page Application with routing and full page renders depending on
+                        the route.
+                        It was designed as a feedback form to provide instructors feedback on the day's lesson/lessons.
+                        It was also my first use of Redux as a way to manage global state. As the user goes through the
+                        app an object is created in redux, which is
+                        then send to the server and subsequently to the database on the submission confirmation.
+                    </p>
                     <p>
-                        You can find the repository at 
-                        <a href="https://github.com/Samuelvphipps/weekend-redux-feedback-loop">https://github.com/Samuelvphipps/weekend-redux-feedback-loop</a>
+                        You can find the repository at
+                        <a
+                            href="https://github.com/Samuelvphipps/weekend-redux-feedback-loop">https://github.com/Samuelvphipps/weekend-redux-feedback-loop</a>
                     </p>
                 </div>
-                        <!-- Reflection -->
-                <div class="projectDetailsContainer">
+                <!-- Reflection -->
+                <!-- <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">Lessons learned</h4>
-                    <ul>                           
+                    <ul>
                         <li>Semantic elements are just divs with names for accessibility and organization.</li>
-                        <li>I really enjoy this and have a ton to learn.</li>                                                               
-                    </ul>        
+                        <li>I really enjoy this and have a ton to learn.</li>
+                    </ul>
+                </div> -->
             </div>
         </article>
 
@@ -95,22 +105,28 @@
                 <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">About</h4>
                     <p>
-                        Grip 'N Grin was my first ever full stack application developed from scratch, 
-                        including scoping (<a href="https://docs.google.com/document/d/1dmCCLtQIUr84jyHMNd6_2cbjl_CpALveCc1RYGwJKIc/edit?usp=sharing">scoping document</a>), 
-                        programming, debugging and deploying (<a><i>deployed website link</i></a>.) I used React for the front end and Node.js for the backend.                     
-                    </p>    
-                    <p>You can view the project at: <a href="https://gripngrin.herokuapp.com/#/home">https://gripngrin.herokuapp.com/#/home</a>.</p>
+                        Grip 'N Grin was my first ever full stack application developed from scratch,
+                        including scoping (<a
+                            href="https://docs.google.com/document/d/1dmCCLtQIUr84jyHMNd6_2cbjl_CpALveCc1RYGwJKIc/edit?usp=sharing">scoping
+                            document</a>),
+                        programming, debugging and deploying (<a><i>deployed website link</i></a>.) I used React for the
+                        front end and Node.js for the backend.
+                    </p>
+                    <p>You can view the project at: <a
+                            href="https://gripngrin.herokuapp.com/#/home">https://gripngrin.herokuapp.com/#/home</a>.
+                    </p>
                 </div>
-                        <!-- Reflection -->
-                <div class="projectDetailsContainer">
+                <!-- Reflection -->
+                <!-- <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">Lessons learned</h4>
                     <ul>
                         <li>Always manage state and ensure that there is no state mismatch.</li>
                         <li>Stick to the single responsibility principle.</li>
                         <li>Comment clearly as you go.</li>
                         <li>Reasses development plan as the project develops.</li>
-                    </ul>
+                    </ul> -->
                 </div>
+            </div>
         </article>
 
         <!-- Client Project -->
@@ -120,29 +136,37 @@
             <div class="projectInnerContainer">
                 <div class="projectTitleContainer">
                     <!-- screenshot -->
-                    <img src="./images/ILT.png" alt="ILT Academy screenshot">
+                    <img src="./images/AdminDashboard.png" alt="ILT Academy screenshot">
                 </div>
                 <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">About</h4>
                     <p>
-                        ILT Academy requested a new learning management system to streamline their entrepreneurship training program. As a group of four developers we 
-                scoped(<a href="https://docs.google.com/document/d/1dmCCLtQIUr84jyHMNd6_2cbjl_CpALveCc1RYGwJKIc/edit?usp=sharing">scoping document</a>), 
-                programmed, debugged and deploying(<a><i>deployed website link</i></a>) the application. 
+                        ILT Academy requested a new learning management system to streamline their entrepreneurship
+                        training program. As a group of four developers we
+                        scoped (<a
+                            href="https://docs.google.com/document/d/1dmCCLtQIUr84jyHMNd6_2cbjl_CpALveCc1RYGwJKIc/edit?usp=sharing">scoping
+                            document</a>),
+                        programmed, debugged and deployed) the application. This project was a challenge and had many
+                        layers. We incorporated many new technologies
+                        including AWS S3 storage, a WYSIWYG, and Google Calendar.
                     </p>
                     <p>
-                        You can find the repository at: <i>Placeholder text</i>.
-                    </p>    
+                        You can view the project at: <a
+                            href="https://ilt-academy.herokuapp.com/#/">https://ilt-academy.herokuapp.com/#/</a>.</p>
+                    </p>
                 </div>
-                        <!-- Reflection -->
-                <div class="projectDetailsContainer">
+                <!-- Reflection -->
+                <!-- <div class="projectDetailsContainer">
                     <h4 class="projectSubHeader">Lessons learned</h4>
                     <ul>
-                        <li>Dont be so freaking awesome all the time.</li>     
+                        <li>Dont be so freaking awesome all the time.</li>
                     </ul>
-                
+
+                </div> -->
             </div>
         </article>
 
     </main>
 </body>
+
 </html>
