--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         caught the bug. It is wonderful to look back at a project and realize how far I have
                         come.
                     </p>
-                    <p>You can find the project at <a
+                    <p>You can find the project at: <a
                             href="https://samuelvphipps.github.io/">https://samuelvphipps.github.io/</a></p>
                 </div>
                 <!-- Reflection -->
@@ -78,7 +78,7 @@
                         then send to the server and subsequently to the database on the submission confirmation.
                     </p>
                     <p>
-                        You can find the repository at
+                        You can find the repository at:
                         <a
                             href="https://github.com/Samuelvphipps/weekend-redux-feedback-loop">https://github.com/Samuelvphipps/weekend-redux-feedback-loop</a>
                     </p>
